Background menu on mobile, remove rel in tags and clean space after div id's

--- a/style.less
+++ b/style.less
@@ -618,6 +618,11 @@ blockquote p{
 	.main-nav{
 		display: none;
 	}
+	.section-simplicitate-menu{
+		background: none transparent !important;
+		border-top:none transparent !important;
+		border-bottom:none transparent !important;
+	}
 	.menu-mobile{
 		display: block;
 		margin: 15px auto;
