Icons Style for 2.3

--- a/style.less
+++ b/style.less
@@ -73,6 +73,11 @@ blockquote p{
 
 .icons{
 	bottom: 40%;
+	height: 24px;
+	line-height: 20px;
+	position: absolute;
+	right: 0px;
+	text-align: right;
 	&.simplicitate{
 		margin-right: 30px;
 	}
