New external URL

--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@ Author: Enrique Chavez
 Author URI: http://tmeister.net
 Tags: theme-options, one-column, two-columns, three-columns, left-sidebar, right-sidebar, flexible-width, custom-menu, fixed-width, threaded-comments, custom-background,  custom-header, custom-colors, custom-menu, photoblogging, translation-ready, white, silver, light, blue, green, yellow
 Demo: http://pagelines.tmeister.net/simplicitate
-External: http://pagelines.tmeister.net/simplicitate-theme
+External: http://tmeister.net/themes-and-sections/simplicitate/
 
 Template: pagelines
 
